# gensio

./: FAQ.rst  README.rst  configure.ac  meson.build  meson_options.txt
c++/: README.rst
c++/include/gensio/: gensio  gensioosh
c++/lib/: meson.build
c++/swig/go/gensio/: gensio.srcswigcxx  gensioapi.srcgo
c++/swig/go/tests/: srctest_basic.go
c++/swig/pygensio/: pygensio.i
c++/swig/pygensio/tests/: test_ax25.py  testbase.py
docs/: AFSK_Modem.rst
examples/: basic_server_sync.c  basic_server_sync_fork.c
glib/: meson.build
glib/c++/swig/pygensio/: README.rst
include/gensio/: gensio.h  gensio_base.h  gensio_os_funcs.h  meson.build
lib/: README.rst  errtrig.c  gensio_afskmdm.c  gensio_ax25.c  gensio_base.c  gensio_certauth.c  gensio_filter_afskmdm.c  gensio_filter_certauth.c  gensio_keepopen.c  gensio_kiss.c  gensio_msgdelim.c  gensio_mux.c  gensio_net.c  gensio_osops.c  gensio_perf.c  gensio_ratelimit.c  gensio_relpkt.c  gensio_script.c  gensio_ssl.c  gensio_trace.c  gensio_udp.c  gensio_win.c  gensio_xlt.c  heap.h  mdns.c  meson.build  selector.c  sergensio_telnet.c  telnet.c  telnet.h
man/: gensio.5  gensio_control.3  gensio_event.3  sergensio_baud.3
swig/python/: gensiodoc.py
tcl/: gensio_tcl.c  meson.build
tests/: ipmisimdaemon.py  oomtest.c  utils.py
tools/: gensiotool.c  gtlsshd.8  gtlsshd.c  meson.build
